# haskell-database

./: .gitignore  LICENSE  Main.hs  README.md  README.org  db.cabal  haskell-database.cabal  main.hs  stack.yaml  test.csv  todo.md
.databases/tables/: test.csv
Common/: String.hs
Console/: App.hs  DBConsole.hs  StringParsing.hs
Database/: Database.hs  Table.hs
Engine/Functions/: Table.hs
Engine/Types/Table/: AType.hs  PolyType.hs  Table.hs
Interface/: Database.hs  Table.hs
Parser/: PolyType.hs  String.hs
Parsing/: ByteString.hs  String.hs
Server/: Main.hs
Server/client/: index.html  main.elm
Types/: AType.hs  PolyType.hs  Table.hs
app/: Main.hs
client/: index.html  main.elm
src/: Common.hs  Console.hs  Engine.hs  Server.hs
src/Common/: Exception.hs  File.hs  List.hs  Maybe.hs  String.hs
src/Console/: App.hs  DBConsole.hs  StringParsing.hs
src/Engine/Functions/: DB.hs  Table.hs
src/Engine/Types/: DB.hs  Table.hs
src/Engine/Types/Table/: AType.hs  PolyType.hs  Table.hs
src/Server/: Main.hs
src/cbits/: file_methods.c
test/Common/: MaybeSpec.hs  StringSpec.hs
test/Console/: DBConsoleSpec.hs  StringParsingSpec.hs
test/Engine/Functions/: DBSpec.hs  TableSpec.hs
test/Engine/Types/Table/: ATypeSpec.hs  PolyTypeSpec.hs  TableSpec.hs
